@@ -89,7 +89,14 @@
         </table>
     </div>
 </div>
-
+<div id="container3">
+    <div id="mvp">
+        <p class="identifier">MVP</p>
+    </div>
+    <div id="pitching-stats">
+        <p class="identifier">Pitching</p>
+    </div>
+</div>
 
 <div id="container3">
     <div id="pitching-stats">
@@ -97,6 +104,6 @@
     </div>
 </div>
 
-<p id="version">v0.1.3</p>
+<p id="version">v0.1.3.1</p>
 
 <script src="./script.js"></script>
