@@ -7,6 +7,10 @@ PARTIAL RELEASE/EARLY ACCESS:
 
 0.1.3:
 - Simplified hitting probabilities (stuff was getting out of control)
+- Added more UI elements
+    - MVP display
+    - Pitching stats
+- Changed up the player ratings (experimental)
 
 0.1.2: 
 - More UI stuff like:
